--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
-  "name": "trade",
+  "name": "primexindia",
+  "homepage": "http://your-domain-name.com/your-sitename",
   "version": "0.1.0",
+  
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
